--- a/barchart-feed-ddf-datalink/pom.xml
+++ b/barchart-feed-ddf-datalink/pom.xml
@@ -32,11 +32,11 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.barchart.feed</groupId> -->
-<!-- 			<artifactId>barchart-feed-ddf-settings</artifactId> -->
-<!-- 			<version>${project.parent.version}</version> -->
-<!-- 		</dependency> -->
+ 		<dependency> 
+ 			<groupId>com.barchart.feed</groupId> 
+ 			<artifactId>barchart-feed-ddf-settings</artifactId> 
+ 			<version>${project.parent.version}</version> 
+ 		</dependency> 
 		
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
