--- a/barchart-feed-ddf-historical/pom.xml
+++ b/barchart-feed-ddf-historical/pom.xml
@@ -22,16 +22,10 @@
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
-			<artifactId>barchart-feed-ddf-instrument</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-ddf-settings</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-ddf-message</artifactId>
@@ -39,28 +33,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.barchart.feed</groupId>
-			<artifactId>barchart-feed-ddf-symbol</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-
-		<dependency>
 			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-bench</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>${barchartUtilVersion}</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>com.barchart.util</groupId>
-			<artifactId>barchart-util-values</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.barchart.feed</groupId>
-			<artifactId>barchart-feed-base</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
-		</dependency>
 	</dependencies>
 
 </project>
