--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -17,15 +17,11 @@
   <dependencies>
 
 		<dependency>
-			<groupId>com.barchart.util</groupId>
-			<artifactId>barchart-util-values</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-base</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<version>${barchartFeedBaseVersion}</version>
 		</dependency>
+		
 	</dependencies>
+	
 </project>
