--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>barchart-feed-ddf</artifactId>
     <groupId>com.barchart.feed</groupId>
-    <version>3.2.0-SNAPSHOT</version>
+    <version>3.2.0</version>
   </parent>
   <artifactId>barchart-feed-ddf-util</artifactId>
   <packaging>bundle</packaging>
