--- a/barchart-feed-ddf-symbol/pom.xml
+++ b/barchart-feed-ddf-symbol/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>barchart-feed-ddf</artifactId>
     <groupId>com.barchart.feed</groupId>
-    <version>3.2.0</version>
+    <version>3.2.1-SNAPSHOT</version>
   </parent>
   
   <artifactId>barchart-feed-ddf-symbol</artifactId>
