Added VarMarketDDF, VarBookDDF, and VarBookTopDDF Refactored for barchart.feed.core V1.3.2

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>barchart-feed-ddf</name>
 	<comment></comment>
 	<projects>
+		<project>barchart-feed-base</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
