--- a/barchart-feed-ddf-symbol/pom.xml
+++ b/barchart-feed-ddf-symbol/pom.xml
@@ -26,5 +26,33 @@
 		</dependency>
 
 	</dependencies>
+	
+	<build>
+	
+  	  <plugins>
+  	  
+  	    <!-- publishes module's maven site to github  -->
+  	    <!-- merge = true for all modules -->
+    	<plugin>
+      	  <groupId>com.github.github</groupId>
+      	  <artifactId>site-maven-plugin</artifactId>
+      	  <version>0.5</version>
+      	  <configuration>
+        	<message>Creating site for ${project.version}</message>
+        	<merge>true</merge>
+      	  </configuration>
+      	  <executions>
+        	<execution>
+          	  <goals>
+            	<goal>site</goal>
+          	  </goals>
+          	  <phase>site</phase>
+        	</execution>
+      	  </executions>
+    	</plugin>
+    	
+  	  </plugins>
+  	  
+	</build>
   
 </project>
