--- a/barchart-feed-ddf-resolver/pom.xml
+++ b/barchart-feed-ddf-resolver/pom.xml
@@ -9,6 +9,7 @@
     <version>3.2.4-SNAPSHOT</version>
   </parent>
   
+  <name>barchart-feed-ddf-resolver</name>
   <artifactId>barchart-feed-ddf-resolver</artifactId>
   <packaging>bundle</packaging>
   
