--- a/barchart-feed-ddf-settings/pom.xml
+++ b/barchart-feed-ddf-settings/pom.xml
@@ -8,6 +8,7 @@
 		<version>3.2.4-SNAPSHOT</version>
 	</parent>
 
+	<name>barchart-feed-ddf-settings</name>
 	<artifactId>barchart-feed-ddf-settings</artifactId>
 	<packaging>bundle</packaging>
 
