--- a/barchart-feed-ddf-symbol/pom.xml
+++ b/barchart-feed-ddf-symbol/pom.xml
@@ -8,6 +8,7 @@
     <version>3.2.4-SNAPSHOT</version>
   </parent>
   
+  <name>barchart-feed-ddf-symbol</name>
   <artifactId>barchart-feed-ddf-symbol</artifactId>
   <packaging>bundle</packaging>
   
