--- a/barchart-feed-ddf-historical/pom.xml
+++ b/barchart-feed-ddf-historical/pom.xml
@@ -52,6 +52,7 @@
       	  <version>0.5</version>
       	  <configuration>
         	<message>Creating site for ${project.version}</message>
+        	<path>barchart-feed-ddf/barchart-feed-ddf-historical</path>
         	<merge>true</merge>
       	  </configuration>
       	  <executions>
