--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -186,6 +186,7 @@
       	  		<version>0.5</version>
       	  		<configuration>
         			<message>Creating site for ${project.version}</message>
+        			<path>barchart-feed-ddf/barchart-feed-ddf-assembly</path>
         			<merge>true</merge>
       	  		</configuration>
       	  		<executions>
