--- a/barchart-feed-ddf-instrument/pom.xml
+++ b/barchart-feed-ddf-instrument/pom.xml
@@ -40,6 +40,7 @@
       	  <version>0.5</version>
       	  <configuration>
         	<message>Creating site for ${project.version}</message>
+        	<path>barchart-feed-ddf/barchart-feed-ddf-instrument</path>
         	<merge>true</merge>
       	  </configuration>
       	  <executions>
