--- a/barchart-feed-ddf-resolver/pom.xml
+++ b/barchart-feed-ddf-resolver/pom.xml
@@ -47,6 +47,7 @@
       	  <version>0.5</version>
       	  <configuration>
         	<message>Creating site for ${project.version}</message>
+        	<path>barchart-feed-ddf/barchart-feed-ddf-resolver</path>
         	<merge>true</merge>
       	  </configuration>
       	  <executions>
