--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -6,7 +6,7 @@
     <version>3.2.4-SNAPSHOT</version>
   </parent>
   
-  <name>barchart-feed-ddf-util</name>
+  <name>util</name>
   <artifactId>barchart-feed-ddf-util</artifactId>
   <packaging>bundle</packaging>
   
@@ -38,7 +38,7 @@
       	  <version>0.5</version>
       	  <configuration>
         	<message>Creating site for ${project.version}</message>
-        	<path>git://github.com/barchart/barchart-feed-ddf/barchart-feed-ddf-util/</path>
+        	<path>barchart-feed-ddf/util</path>
         	<merge>true</merge>
       	  </configuration>
       	  <executions>
