--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -179,6 +179,25 @@
 				</configuration>
 			</plugin>
 			
+			<!-- publishes module's maven site to github  -->
+			<plugin>
+      	  		<groupId>com.github.github</groupId>
+      	  		<artifactId>site-maven-plugin</artifactId>
+      	  		<version>0.5</version>
+      	  		<configuration>
+        			<message>Creating site for ${project.version}</message>
+        			<path>barchart-feed-ddf/barchart-feed-ddf-assembly</path>
+        			<merge>true</merge>
+      	  		</configuration>
+      	  		<executions>
+        			<execution>
+          	  			<goals>
+            				<goal>site</goal>
+          	  			</goals>
+          	  			<phase>site</phase>
+        			</execution>
+      	  		</executions>
+    		</plugin>
 
 		</plugins>
 
