--- a/barchart-feed-ddf-historical/pom.xml
+++ b/barchart-feed-ddf-historical/pom.xml
@@ -41,8 +41,27 @@
 	</dependencies>
 	
 	<build>
-	
-  	  
+		<plugins>
+	<!-- publishes module's maven site to github  -->
+			<plugin>
+      	  		<groupId>com.github.github</groupId>
+      	  		<artifactId>site-maven-plugin</artifactId>
+      	  		<version>0.5</version>
+      	  		<configuration>
+        			<message>Creating site for ${project.version}</message>
+        			<path>barchart-feed-ddf/barchart-feed-ddf-historical</path>
+        			<merge>true</merge>
+      	  		</configuration>
+      	  		<executions>
+        			<execution>
+          	  			<goals>
+            				<goal>site</goal>
+          	  			</goals>
+          	  			<phase>site</phase>
+        			</execution>
+      	  		</executions>
+    		</plugin>
+  	  </plugins>
 	</build>
 
 </project>
