Update path used for GitHub site Maven plugin
No prefix is needed, only the path of the module which
will be interpreted relative to the root of the site.

Also upgrades to the latest plugin version and includes
the artifact id of the site being generated in the commit
message.

--- a/barchart-feed-ddf-historical/pom.xml
+++ b/barchart-feed-ddf-historical/pom.xml
@@ -46,10 +46,10 @@
 			<plugin>
       	  		<groupId>com.github.github</groupId>
       	  		<artifactId>site-maven-plugin</artifactId>
-      	  		<version>0.5</version>
+      	  		<version>0.6</version>
       	  		<configuration>
-        			<message>Creating site for ${project.version}</message>
-        			<path>barchart-feed-ddf/barchart-feed-ddf-historical</path>
+        			<message>Creating site for ${project.artifactId} ${project.version}</message>
+        			<path>barchart-feed-ddf-historical</path>
         			<merge>true</merge>
       	  		</configuration>
       	  		<executions>
