--- a/pom.xml
+++ b/pom.xml
@@ -69,10 +69,10 @@
     	<plugin>
       	  <groupId>com.github.github</groupId>
       	  <artifactId>site-maven-plugin</artifactId>
-      	  <version>0.5</version>
+      	  <version>0.6</version>
       	  <configuration>
-        	<message>Creating site for ${project.version}</message>
-        	<includes>${barchart-feed-ddf-util}</includes>
+        	<message>Creating site for ${project.artifactId} ${project.version}</message>
+        	<merge>false</merge>
       	  </configuration>
       	  <executions>
         	<execution>
