--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -183,10 +183,10 @@
 			<plugin>
       	  		<groupId>com.github.github</groupId>
       	  		<artifactId>site-maven-plugin</artifactId>
-      	  		<version>0.5</version>
+      	  		<version>0.6</version>
       	  		<configuration>
-        			<message>Creating site for ${project.version}</message>
-        			<path>barchart-feed-ddf/barchart-feed-ddf-assembly</path>
+        			<message>Creating site for ${project.artifactId} ${project.version}</message>
+        			<path>barchart-feed-ddf-assembly</path>
         			<merge>true</merge>
       	  		</configuration>
       	  		<executions>
