--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
 	
 	</properties>
 	
+	<dependencies>
+	
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
+		</dependency>
+	
+	</dependencies>
+	
 	<modules>
 
 		<module>barchart-feed-ddf-settings</module>
