--- a/barchart-feed-ddf-client/pom.xml
+++ b/barchart-feed-ddf-client/pom.xml
@@ -42,5 +42,28 @@
 
 	</dependencies>
 
+	<build>
+		<plugins>
+	<!-- publishes module's maven site to github  -->
+			<plugin>
+      	  		<groupId>com.github.github</groupId>
+      	  		<artifactId>site-maven-plugin</artifactId>
+      	  		<version>0.6</version>
+      	  		<configuration>
+        			<message>Creating site for ${project.artifactId} ${project.version}</message>
+        			<path>barchart-feed-ddf-client</path>
+        			<merge>true</merge>
+      	  		</configuration>
+      	  		<executions>
+        			<execution>
+          	  			<goals>
+            				<goal>site</goal>
+          	  			</goals>
+          	  			<phase>site</phase>
+        			</execution>
+      	  		</executions>
+    		</plugin>
+  	  </plugins>
+	</build>
 
 </project>
