--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -8,17 +9,17 @@
 		<version>3.4.3-SNAPSHOT</version>
 	</parent>
 
-	<name>barchart-feed-ddf-assembly</name>
 	<artifactId>barchart-feed-ddf-assembly</artifactId>
 	<packaging>bundle</packaging>
+
+	<name>barchart-feed-ddf-assembly</name>
+	<description>barchart module assembly</description>
 
 	<scm>
 		<url>https://github.com/barchart/barchart-feed-ddf</url>
 		<connection>scm:git:git://github.com/barchart/barchart-feed-ddf.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-feed-ddf.git</developerConnection>
 	</scm>
-
-	<description>barchart module assembly</description>
 
 	<dependencies>
 
@@ -65,11 +66,11 @@
 			<artifactId>joda-time</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
-			<groupId>org.jboss.netty</groupId>
+			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
-			<version>3.2.7.Final</version>
+			<version>${barchartNettyVersion}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -199,26 +200,26 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			
-			<!-- publishes module's maven site to github  -->
+
+			<!-- publishes module's maven site to github -->
 			<plugin>
-      	  		<groupId>com.github.github</groupId>
-      	  		<artifactId>site-maven-plugin</artifactId>
-      	  		<version>0.6</version>
-      	  		<configuration>
-        			<message>Creating site for ${project.artifactId} ${project.version}</message>
-        			<path>barchart-feed-ddf-assembly</path>
-        			<merge>true</merge>
-      	  		</configuration>
-      	  		<executions>
-        			<execution>
-          	  			<goals>
-            				<goal>site</goal>
-          	  			</goals>
-          	  			<phase>site</phase>
-        			</execution>
-      	  		</executions>
-    		</plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.6</version>
+				<configuration>
+					<message>Creating site for ${project.artifactId} ${project.version}</message>
+					<path>barchart-feed-ddf-assembly</path>
+					<merge>true</merge>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 
