--- a/barchart-feed-ddf-client/pom.xml
+++ b/barchart-feed-ddf-client/pom.xml
@@ -1,16 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
-  
-  	<parent>
-    	<groupId>com.barchart.feed</groupId>
-    	<artifactId>barchart-feed-ddf</artifactId>
-    	<version>3.4.3-SNAPSHOT</version>
-  	</parent>
-  
-  	<name>barchart-feed-ddf-client</name>
- 	<artifactId>barchart-feed-ddf-client</artifactId>
+
+	<parent>
+		<groupId>com.barchart.feed</groupId>
+		<artifactId>barchart-feed-ddf</artifactId>
+		<version>3.4.3-SNAPSHOT</version>
+	</parent>
+
+	<artifactId>barchart-feed-ddf-client</artifactId>
 	<packaging>bundle</packaging>
+
+	<name>barchart-feed-ddf-client</name>
 
 	<scm>
 		<url>https://github.com/barchart/barchart-feed-ddf</url>
@@ -38,32 +40,32 @@
 			<artifactId>barchart-feed-ddf-market</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		
+
 
 	</dependencies>
 
 	<build>
 		<plugins>
-	<!-- publishes module's maven site to github  -->
+			<!-- publishes module's maven site to github -->
 			<plugin>
-      	  		<groupId>com.github.github</groupId>
-      	  		<artifactId>site-maven-plugin</artifactId>
-      	  		<version>0.6</version>
-      	  		<configuration>
-        			<message>Creating site for ${project.artifactId} ${project.version}</message>
-        			<path>barchart-feed-ddf-client</path>
-        			<merge>true</merge>
-      	  		</configuration>
-      	  		<executions>
-        			<execution>
-          	  			<goals>
-            				<goal>site</goal>
-          	  			</goals>
-          	  			<phase>site</phase>
-        			</execution>
-      	  		</executions>
-    		</plugin>
-  	  </plugins>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.6</version>
+				<configuration>
+					<message>Creating site for ${project.artifactId} ${project.version}</message>
+					<path>barchart-feed-ddf-client</path>
+					<merge>true</merge>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
