--- a/barchart-feed-ddf-instrument/pom.xml
+++ b/barchart-feed-ddf-instrument/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -17,44 +18,44 @@
 		<connection>scm:git:git://github.com/barchart/barchart-feed-ddf.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-feed-ddf.git</developerConnection>
 	</scm>
-	
+
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-ddf-symbol</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-	
+
 	</dependencies>
-	
+
 	<build>
-	
-  	  <plugins>
-  	  
-  	    <!-- publishes module's maven site to github  -->
-  	    <!-- merge = true for all modules -->
-    	<plugin>
-      	  <groupId>com.github.github</groupId>
-      	  <artifactId>site-maven-plugin</artifactId>
-      	  <version>0.6</version>
-      	  <configuration>
-        	<message>Creating site for ${project.artifactId} ${project.version}</message>
-        	<path>barchart-feed-ddf-instrument</path>
-        	<merge>true</merge>
-      	  </configuration>
-      	  <executions>
-        	<execution>
-          	  <goals>
-            	<goal>site</goal>
-          	  </goals>
-          	  <phase>site</phase>
-        	</execution>
-      	  </executions>
-    	</plugin>
-    	
-  	  </plugins>
-  	  
+
+		<plugins>
+
+			<!-- publishes module's maven site to github -->
+			<!-- merge = true for all modules -->
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.6</version>
+				<configuration>
+					<message>Creating site for ${project.artifactId} ${project.version}</message>
+					<path>barchart-feed-ddf-instrument</path>
+					<merge>true</merge>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>site</phase>
+					</execution>
+				</executions>
+			</plugin>
+
+		</plugins>
+
 	</build>
-	
+
 </project>
