--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.barchart.feed</groupId>
 	<artifactId>barchart-feed-ddf</artifactId>
-	<version>3.4.3</version>
+	<version>3.4.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<scm>
