--- a/barchart-feed-ddf-datalink/pom.xml
+++ b/barchart-feed-ddf-datalink/pom.xml
@@ -22,6 +22,12 @@
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
+			<artifactId>barchart-feed-client</artifactId>
+			<version>0.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-ddf-settings</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
