--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
 		<!-- <artifactId>barchart-feed-base</artifactId> -->
 		<barchartFeedBaseVersion>1.3.7</barchartFeedBaseVersion>
 
+		<!-- <groupId>com.barchart.feed</groupId> -->
+		<!-- <artifactId>barchart-feed-base</artifactId> -->
+		<barchartFeedClientVersion>0.0.2</barchartFeedClientVersion>
+
 		<!-- <groupId>io.netty</groupId> -->
 		<!-- <artifactId>netty</artifactId> -->
 		<barchartNettyVersion>3.5.1.Final</barchartNettyVersion>
