--- a/barchart-feed-ddf-datalink/pom.xml
+++ b/barchart-feed-ddf-datalink/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-client</artifactId>
-			<version>0.0.2</version>
+			<version>[0.0.2,1.0.0)</version>
 		</dependency>
 
 		<dependency>
