--- a/barchart-feed-ddf-instrument/pom.xml
+++ b/barchart-feed-ddf-instrument/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.barchart.feed</groupId>
 		<artifactId>barchart-feed-ddf</artifactId>
-		<version>3.4.6</version>
+		<version>3.4.7-SNAPSHOT</version>
 	</parent>
 
 	<name>barchart-feed-ddf-instrument</name>
