Automatically reset settlement state when a new session day code is seen on a trade

--- a/barchart-feed-ddf-client/pom.xml
+++ b/barchart-feed-ddf-client/pom.xml
@@ -39,7 +39,14 @@
 			<artifactId>barchart-feed-ddf-market</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty</artifactId>
+			<version>${barchartNettyVersion}</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
