--- a/barchart-feed-ddf-resolver/pom.xml
+++ b/barchart-feed-ddf-resolver/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>barchart-feed-ddf</artifactId>
 		<groupId>com.barchart.feed</groupId>
-		<version>3.4.12</version>
+		<version>3.4.13-SNAPSHOT</version>
 	</parent>
 
 	<name>barchart-feed-ddf-resolver</name>
