--- a/barchart-feed-ddf-symbol/pom.xml
+++ b/barchart-feed-ddf-symbol/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>barchart-feed-ddf</artifactId>
 		<groupId>com.barchart.feed</groupId>
-		<version>3.4.12</version>
+		<version>3.4.13-SNAPSHOT</version>
 	</parent>
 
 	<name>barchart-feed-ddf-symbol</name>
