--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -88,6 +89,20 @@
 
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>eclipse</id>
+			<activation>
+				<file>
+					<exists>.project</exists>
+				</file>
+			</activation>
+			<properties>
+				<XXX>XXX</XXX>
+			</properties>
+		</profile>
+	</profiles>
+
 	<build>
 
 		<plugins>
@@ -138,16 +153,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<configuration>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>bundle-sources</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>jar-no-fork</goal>
@@ -205,26 +215,6 @@
 						</Export-Package>
 					</instructions>
 				</configuration>
-			</plugin>
-
-			<!-- publishes module's maven site to github -->
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.6</version>
-				<configuration>
-					<message>Creating site for ${project.artifactId} ${project.version}</message>
-					<path>barchart-feed-ddf-assembly</path>
-					<merge>true</merge>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<phase>site</phase>
-					</execution>
-				</executions>
 			</plugin>
 
 		</plugins>
