--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 		<!-- <groupId>com.barchart.feed</groupId> -->
 		<!-- <artifactId>barchart-feed-base</artifactId> -->
-		<barchartFeedBaseVersion>1.3.13</barchartFeedBaseVersion>
+		<barchartFeedBaseVersion>LATEST</barchartFeedBaseVersion>
 
 		<!-- <groupId>com.barchart.feed</groupId> -->
 		<!-- <artifactId>barchart-feed-base</artifactId> -->
