--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -82,21 +83,24 @@
 
 		<plugins>
 
-			<!-- publishes module's maven site to github -->
+			<!-- publish maven site to github -->
 			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
-				<version>0.6</version>
-				<configuration>
-					<message>Creating site for ${project.artifactId} ${project.version}</message>
-					<merge>false</merge>
-				</configuration>
+				<version>0.7</version>
 				<executions>
 					<execution>
+						<id>maven-site</id>
 						<goals>
 							<goal>site</goal>
 						</goals>
 						<phase>site</phase>
+						<configuration>
+							<merge>true</merge>
+							<server>github</server>
+							<path>site/${project.artifactId}</path>
+							<message>site ${project.artifactId}-${project.version}</message>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
