--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
 		<!-- <groupId>com.barchart.feed</groupId> -->
 		<!-- <artifactId>barchart-feed-base</artifactId> -->
-		<barchartFeedBaseVersion>1.3.15-SNAPSHOT</barchartFeedBaseVersion>
+		<barchartFeedBaseVersion>1.3.21</barchartFeedBaseVersion>
 
 		<!-- <groupId>com.barchart.feed</groupId> -->
 		<!-- <artifactId>barchart-feed-base</artifactId> -->
