feed and util version

--- a/barchart-feed-ddf-assembly/pom.xml
+++ b/barchart-feed-ddf-assembly/pom.xml
@@ -204,8 +204,8 @@
 						<Embed-Transitive>true</Embed-Transitive>
 						<Export-Package>
 							com.barchart.util.*;version=${barchartUtilVersion},
-							com.barchart.feed.base.*;version=${barchartFeedBaseVersion},
-							com.barchart.feed.client.*;version=${barchartFeedClientVersion},
+							com.barchart.feed.base.*;version=${barchartFeedVersion},
+							com.barchart.feed.client.*;version=${barchartFeedVersion},
 							com.barchart.feed.ddf.*;version=${project.parent.version},
 						</Export-Package>
 					</instructions>
