Updated pom to new barchart.feed 1_4_0

--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -35,6 +35,11 @@
 			<artifactId>barchart-feed-base</artifactId>
 			<version>${barchartFeedVersion}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.barchart.feed</groupId>
+			<artifactId>barchart-feed-inst</artifactId>
+			<version>${barchartFeedVersion}</version>
+		</dependency>
 
 	</dependencies>
 
