--- a/barchart-feed-ddf-datalink/pom.xml
+++ b/barchart-feed-ddf-datalink/pom.xml
@@ -29,6 +29,13 @@
   </scm>
 
 	<dependencies>
+	
+		<dependency>
+  			<groupId>com.barchart.missive</groupId>
+			<artifactId>barchart-missive</artifactId>
+			<version>${barchartMissiveVersion}</version>
+			<scope>provided</scope>
+  		</dependency>
 
 		<dependency>
         	<groupId>com.yammer.metrics</groupId>
