--- a/barchart-feed-ddf-resolver/pom.xml
+++ b/barchart-feed-ddf-resolver/pom.xml
@@ -42,6 +42,13 @@
 			<artifactId>lucene-core</artifactId>
 			<version>3.5.0</version>
 		</dependency>
+		
+		<dependency>
+  			<groupId>com.barchart.missive</groupId>
+			<artifactId>barchart-missive</artifactId>
+			<version>${barchartMissiveVersion}</version>
+			<scope>provided</scope>
+  		</dependency>
 
 	</dependencies>
 
