Fixed historical symbol transformation

--- a/barchart-feed-ddf-client/pom.xml
+++ b/barchart-feed-ddf-client/pom.xml
@@ -31,12 +31,7 @@
 
 	<dependencies>
 	
-		<dependency>
-  			<groupId>com.barchart.missive</groupId>
-			<artifactId>barchart-missive</artifactId>
-			<version>${barchartMissiveVersion}</version>
-			<scope>provided</scope>
-  		</dependency>
+		<!-- DDF -->
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
@@ -56,11 +51,39 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 
+		<!-- missive -->
+
+		<dependency>
+  			<groupId>com.barchart.missive</groupId>
+			<artifactId>barchart-missive</artifactId>
+			<version>${barchartMissiveVersion}</version>
+  		</dependency>
+
+		<!-- protocol buffers - original -->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protoBufVersion}</version>
+		</dependency>	
+  		
+  		<dependency>
+  			<groupId>com.barchart.proto</groupId>
+  			<artifactId>barchart-proto-buf-inst</artifactId>
+			<version>${barchartProtoInstVersion}</version>
+  		</dependency>
+
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
 			<version>${barchartNettyVersion}</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<!-- berkeley db --> 
+  		<dependency>
+			<groupId>com.sleepycat</groupId>
+			<artifactId>je</artifactId>
+			<version>${bdbjeVersion}</version>
 		</dependency>
 
 	</dependencies>
