Updated to latest feed changes

--- a/barchart-feed-ddf-datalink/pom.xml
+++ b/barchart-feed-ddf-datalink/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-client</artifactId>
-			<version>${barchartFeedVersion}</version>
+			<version>${barchartFeedClientVersion}</version>
 		</dependency>
 
 		<dependency>
