--- a/pom.xml
+++ b/pom.xml
@@ -31,19 +31,16 @@
 
 	<properties>
 
-		<!-- http://search.maven.org/#search|ga|1|barchart-util -->
-		<!-- <groupId>com.barchart.util</groupId> -->
-		<!-- <artifactId>barchart-util</artifactId> -->
 		<barchartUtilVersion>2.0.28</barchartUtilVersion>
 
-		<!-- http://search.maven.org/#search|ga|1|barchart-feed -->
-		<!-- <groupId>com.barchart.feed</groupId> -->
-		<!-- <artifactId>barchart-feed</artifactId> -->
-		<barchartFeedVersion>2.0.1-SNAPSHOT</barchartFeedVersion>
+		<barchartFeedAPIVersion>2.0.1-SNAPSHOT</barchartFeedAPIVersion>
+		
+		<barchartFeedInstVersion>2.0.1-SNAPSHOT</barchartFeedInstVersion>
+		
+		<barchartFeedBaseVersion>2.0.1-SNAPSHOT</barchartFeedBaseVersion>
+		
+		<barchartFeedClientVersion>2.0.1-SNAPSHOT</barchartFeedClientVersion>
 
-		<!-- http://search.maven.org/#search|ga|1|io.netty -->
-		<!-- <groupId>io.netty</groupId> -->
-		<!-- <artifactId>netty</artifactId> -->
 		<barchartNettyVersion>3.5.11.Final</barchartNettyVersion>
 		
 		<barchartMissiveVersion>2.0.0</barchartMissiveVersion>
